Fixed header top spacing issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,11 @@ header {
   background-color: white;
 }
 
+body {
+    margin: 0px;
+}
+
+
 header nav {
   padding-right: 40px;
 }
@@ -43,7 +48,7 @@ a {
   display: flex;
   width: auto;
   padding-top: 116px;
-  margin: 0 auto 80px auto;
+  margin: 0px auto 80px auto;
 }
 
 div {
@@ -151,6 +156,7 @@ footer {
   font-family: Verdana;
   font-size: 12px;
 }
+
 footer .title {
   display: inline-block;
   padding-right: 25px;
